# woody

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  build.bat  install.bat
examples/: add.wdy  counter.wdy  gcd.wdy  if.wdy  simple.wdy  stackoverflow.wdy  test.wdy  while.wdy
include/: woody.h  woody_common.h  woody_compiler.h  woody_function.h  woody_lexer.h  woody_lib.h  woody_memory.h  woody_opcodes.def  woody_opcodes.h  woody_parser.h  woody_state.h  woody_tokens.def  woody_tokens.h  woody_utils.h  woody_value.h  woody_vm.h
src/: woody.c  woody_common.c  woody_function.c  woody_lexer.c  woody_lib.c  woody_opcodes.c  woody_parser.c  woody_state.c  woody_utils.c  woody_value.c  woody_vm.c
