cmake_minimum_required(VERSION 3.6)

project(woody)

set(WOODY_VERSION_MAJOR "0")
set(WOODY_VERSION_MINOR "1")
set(WOODY_VERSION_PATCH "0")

set(WOODY_VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}")

set(WOODY_PROJECT_DIR "${CMAKE_CURRENT_LIST_DIR}")

file(GLOB WOODY_SOURCES "src/*.c")

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

add_subdirectory(target)
